welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: value chercheBiscuit
    chercheBiscuit()}
    ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit()== true){
  ^Program:14: error: type mismatch;
 found   : Unit
 required: Boolean
  if (Biscuit=0)
             ^Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
  if (Biscuit !=0)
  ^