welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  while (vuBiscuit()!= false){
  	return(false)
    chercheBiscuit()}
  if (vuBiscuit()== true){
    return(true)
  }
  }

var Biscuit=0


def vuBiscuit() :Boolean ={
  if (Biscuit=0)
  	return(false)
  if (Biscuit !=0)
  	return(true)
}
  
